# BookFinder-Website

./: .env.example  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
BookFinder/: asgi.py  settings.py  urls.py  wsgi.py
Books/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Books/migrations/: 0001_initial.py  0002_book_is_saved.py  0003_alter_book_is_saved.py  0004_book_borrower.py  0005_rename_borrower_book_user.py  0006_alter_book_book_id_alter_book_buy_link_and_more.py
Books/templates/: about.html  book.html  books.html  home.html  search.html  signup.html
Static/style/Books/: style.css
Templates/: base.html
Templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
